tests/NormalTests/paczka1/fuzzy1/94182975.err
Error in line 6: CzzS6lbzbwv A250 92,4
Error in line 18: KJl S826 -1,5
Error in line 16: 0pUOrbk547 S826 70,8
Error in line 13: 2DFZWTAgJ S295 76,9
Error in line 1: KJl S826 26,9
Error in line 34: llim A250 81,7
